--- a/package.json
+++ b/package.json
@@ -42,8 +42,14 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@types/dompurify": "^3.0.2",
+    "@types/marked": "^5.0.1",
+    "dompurify": "^3.0.5",
     "easymde": "^2.18.0",
     "electron-squirrel-startup": "^1.0.0",
+    "highlight.js": "^11.8.0",
+    "marked": "^5.1.2",
+    "marked-highlight": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-simplemde-editor": "^5.2.0"
